compiler/tests/fixtures/invalid/semantics/scratch_referenced_not_assigned.viv
// Invalid: scratch variable referenced but never assigned

action bad-scratch-ref:
    roles:
        @actor:
            as: initiator
    effects:
        @actor.mood = $@mystery
